small tweak and a fix of flexbox align problem

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -5,6 +5,7 @@ html, body{
     margin: 0px;
     width: 100%;
     height:100%;
+    display: grid;
 }
 * {
     font-family: "Lato", "Roboto", sans-serif !important;
@@ -74,7 +75,9 @@ html, body{
     cursor: default;
 }
 #algorithms_menu{
-    margin-top: 40px;
+    margin-top: 30px;
+    margin-left:auto;
+    margin-right: auto;
     
 }
 .results{
